# mse_id

./: README.md  mse_3D  mse_3D.c  mse_3D.py  mse_id.py  pyproject.toml  requirements.txt  setup.py  submit_jobs.py  utils_id.py
Datos/10x10x100/datos_csv/cte_color/: frame_38.csv
Datos/IN_test/datos_originales/: MR-0270_IN_1000.csv
Datos/test/: white_noise.csv
Datos/test/staged/: cte_color.csv  nature_frames.csv
Graficos/html/: con_luz_intermitente.html  sin_luz_intermitente.html
Graficos/html/escalas_100/: con_luz_intermitente.html  sin_luz_intermitente.html
Graficos/html/escalas_20/: fbm_3d.html
core_c/executables/: mse_3d  mse_3d_p
core_c/headers/: signal_std_funcs.h  utils_funcs.h
core_c/mse_1d/executables/: mse_1d  mse_1d_p
core_c/mse_1d/headers/: read_csv_funcs.h  signal_std_funcs.h  utils_funcs.h
core_c/mse_1d/scripts/: mse_1d.c  read_csv.c  signal_std.c  utils.c
core_c/mse_2d/executables/: mse_2d_p
core_c/mse_2d/headers/: read_csv_funcs.h  utils_funcs.h
core_c/mse_2d/scripts/: mse_2d.c  read_csv.c  utils.c
core_c/mse_3d/executables/: mse_3d_p
core_c/mse_3d/headers/: read_csv_funcs.h  signal_std_funcs.h  utils_funcs.h
core_c/mse_3d/scripts/: mse_3d.c  signal_std.c  utils.c
core_c/scripts/: mse_3d.c  read_csv.c  signal_std.c  utils.c
core_py/: misc.py  mse_3d.py  tiempos.csv  utils.py
core_py/mse_1d/: mse_1d.py  mse_1d_backbone.py  utils.py
core_py/mse_2d/: mse_2d.py  mse_2d_backbone.py  utils.py
core_py/mse_3d/: cluster_functions.py  data_processing.py  mse_3d.py  mse_3d_backbone.py  utils.py
(+1174 files in other folders)
