[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mse_id"
version = "1.0"
authors = [
  { name="Bruno Cerda Mardini", email="bcmardini@gmail.com" },
]
description = "Library that calculates the Multiscale Entropy algorithm on one, two and three dimensional data, implemented in C for fast calculations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bcerdam/mse_id"
Issues = "https://github.com/bcerdam/mse_id/issues"